--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -67,6 +67,15 @@ jobs:
       - name: Build Dray App
         run: pnpm run tauri build --target=${{ matrix.target }}
 
+      - name: Rename artifact on Windows
+        shell: pwsh
+        run: |
+          $file = Get-ChildItem -Filter "dray_*.exe" | Select-Object -First 1
+          if ($file) {
+            $newName = $file.Name -replace '^dray_', 'dray_windows_'
+            Rename-Item -Path $file.FullName -NewName $newName
+          }
+
       - name: List files in the release bundle directory
         run: ls -R src-tauri/target/${{ matrix.target }}/release/bundle
 
