--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -241,14 +241,14 @@ jobs:
 
       - name: Rename artifact on Linux
         run: |
-          DEB_FILE=$(ls "$BUNDLE_DIR"/deb/dray_* 2>/dev/null || true)
+          DEB_FILE=$(find "$BUNDLE_DIR"/deb -maxdepth 1 -type f -name "dray_*" 2>/dev/null || true)
           if [ -n "$DEB_FILE" ]; then
             mv "$DEB_FILE" "${DEB_FILE/dray_/dray_linux_}"
           else
             echo "❗ No dray_* file found in $BUNDLE_DIR/deb to rename."
           fi
-          
-          RPM_FILE=$(ls "$BUNDLE_DIR"/rpm/dray_* 2>/dev/null || true)
+
+          RPM_FILE=$(find "$BUNDLE_DIR"/rpm -maxdepth 1 -type f -name "dray_*" 2>/dev/null || true)
           if [ -n "$RPM_FILE" ]; then
             mv "$RPM_FILE" "${RPM_FILE/dray_/dray_linux_}"
           else
